# Task-manager

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d9a9a97699c9_create_users_and_tasks_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  tasks.py  users.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  openapi_responses.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/repositories/: task_repository.py  user_repository.py
backend/app/schemas/: auth.py  common.py  task.py  user.py
backend/app/services/: auth_service.py  task_service.py
backend/tests/: conftest.py  test_auth.py  test_authorization.py  test_tasks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  errors.js
frontend/src/components/: Banner.jsx  Modal.jsx  ProtectedRoute.jsx  TaskForm.jsx  TaskRow.jsx  badges.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
